--- a/index.html
+++ b/index.html
@@ -43,19 +43,24 @@
 					</nav>
 
 			</div>
-			<!-- Main -->
+			<!-- First Map -->
 					<h2>Communication Cables</h2>
 					<p> Deep in the ocean there are "submarine cables" (communication lines) that carry our phone and internet<br>
-							traffic. The first submarine cables were laid in the 1850s to carry telegraphy.
+							traffic. The first communication cables were laid in the 1850s to carry telegraphy.
 							<br>
 							Using data obtained from <a href="https://github.com/telegeography/www.submarinecablemap.com" target="_blank"> TeleGeography</a> combined with the Mapbox JavaScript library.<br>
-							The map below shows all communication lines laid in the 1850s, not necesarily if they are still in service.
+							The map below shows all communication lines laid from 1989 to the present.
 							<br>
-							Pan the map around, right click with the mouse to move the map in different directions. Zoom with the mouse's scroll wheel. <br>
+							Pan the map around and right click with the mouse to move the map in different directions. Zoom with the mouse's scroll wheel. <br>
 							Find x,y coordinates by hovering the mouse around the map.
 					</p>
-						<center><iframe src="https://ilaboy.github.io/lab5/" width="1000" height="800"></iframe></center>
+						<center><iframe src="https://ilaboy.github.io/lab5/" width="1500" height="800"></iframe></center>
+					<br>
 
+					<p> The map below displays the landing stations at which point the communication cables connect into the land-based infrastructure network.
+						  <br> I used Mapbox GL JS' built-in functions to visualize points as clusters.
+					</p>
+							<center><iframe src="https://ilaboy.github.io/landingstations/" width="1500" height="800"></iframe></center>
 						</div>
 					</div>
 
